# FrameScout

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: clang-tidy.yml  gtest.yml
src/: CMakeLists.txt  framescout.m.cpp
src/core/: CMakeLists.txt  framescout_imagesearch.cpp  framescout_imagesearch.h
tests/unit/: CMakeLists.txt  framescout_imagesearch.t.cpp
